data/derived/comb/progs/unify/prog3445.ml.out
Characters 109-110:
  | Sine s -> "sin(pi*" ^ Format.printf "%e" s  ^ ")";;
                                             ^
Error: This expression has type expr but an expression was expected of type
         float
